# tiny-reporter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
.home/.tiny-reporter/demo/: 2025-08-13.csv
src/: cli.rs  exec.rs  main.rs  storage.rs  util.rs
tests/: temp_home.rs
