[package]
name = "trep"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
humantime = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
directories = "5.0"
fs2 = "0.4"
ctrlc = "3.4"
[dev-dependencies]
tempfile = "3"
